:sparkles: java 17语法重构代码